# tensormap

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Endpoints.md  README.md  README.md3  README1.md  file1.md  package-lock.json  pyproject.toml  readme2.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: hugo.toml  index.html  tensormaplogo2
docs/content/: index.md
legacy/tensormap-client/: package-lock.json
legacy/tensormap-server/: .gitignore  requirements.txt  run.py
tensorfront/: package-lock.json  package.json
tensormap-client/: .eslintrc.json  .gitignore  App.js  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
tensormap-client-revamp/: .gitignore  package.json
tensormap-client-revamp/src/: index.js  services.js
tensormap-client/public/: index.html
tensormap-client/src/: App.js  App.test.js  Variables.css  index.js  index.sass  react-app-env.d.ts  serviceWorker.js  services.js  theme.js
tensormap-server/: .env.example  .envsample  .flake8  .gitignore  Dockerfile  README.md  app.py  config.yaml  db_backup.sql  dump.sql  environment.yml  requirements.txt  run.py  run_tests.py  setup.sh
tensormap-server-revamp/: .gitignore  README.md  app.py  config.yaml  requirements.txt
tensormap-server-revamp/setup/: settings.py  urls.py
tensormap-server-revamp/shared/: constants.py  utils.py
tensormap-server/app/: __init__.py  app.py
tensormap-server/constants/: errors.py
tensormap-server/data/: .gitignore
tensormap-server/migrations/: env.py
tensormap-server/setup/: settings.py  (+2 more)
(+280 files in other folders)
